implement smoothing of tracks that have ECAL energy constraint